--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
           <i class="fa-solid fa-globe"></i>
         </div>
         <h2>Website</h2>
-        <p>bolaji-six-portfolio.vercel.app</p>
+        <p>deffsnotbjay.vercel.app</p>
       </div>
     </div>
   </section>
