--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
             A 17-year-old full-stack developer from Lagos, Nigeria, mastering front-end and back-end like Html, React, Css, JavaScript, MySQL and MongoDB. He’s building cutting-edge projects in Interior-design, crypto, and airline, always pushing the limits of creativity and code. When not coding, he’s exploring tech trends, films, or sports.
           </p>
           <div class="social-icons">
-            <a href="#" title="twitter"><i class="fab fa-twitter"></i></a>
+            <a href="#" title="twitter"><i class="fa-brands fa-tiktok"></i></a>
             <a href="#" title="facebook"><i class="fab fa-facebook"></i></a>
             <a href="#" title="instagram"><i class="fab fa-instagram"></i></a>
           </div>
@@ -400,11 +400,11 @@
         <div class="footer-section serv">
           <h3>Services</h3>
           <ul>
-            <li><a href="#">→ Web Design</a></li>
-            <li><a href="#">→ Web Development</a></li>
             <li><a href="#">→ Branding</a></li>
-            <li><a href="#">→ Web Management</a></li>
+            <li><a href="#">→ Web Design</a></li>
             <li><a href="#">→ Graphic Design</a></li>
+            <li><a href="#">→ Web Management</a></li>
+            <li><a href="#">→ Web Development</a></li>
           </ul>
         </div>
 
