--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 
     <div id="loading-screen">
         <div class="loading-content">
-            <div class="loading-text">Loading...</div>
+            <div class="loading-text">
+              <img src="pics/ewedu__2_-removebg-preview.png" alt="">
+            </div>
             <div class="loading-bar-container">
                 <div class="loading-bar"></div>
             </div>
